[gd_scene load_steps=8 format=3 uid="uid://blprqppfl7p4"]

[ext_resource type="Script" path="res://scene/settings.gd" id="1_3qic4"]
[ext_resource type="Texture2D" uid="uid://c4qdin1ts2x7n" path="res://ImageAssets/background/mainmenu.png" id="2_yp6uk"]
[ext_resource type="FontFile" uid="uid://bgkjt0du17wvt" path="res://font/Cinzel/Cinzel-VariableFont_wght.ttf" id="3_5g3sa"]
[ext_resource type="StyleBox" uid="uid://c1uap6u03e8ua" path="res://style/hoverpressed.tres" id="4_ye6ia"]
[ext_resource type="StyleBox" uid="uid://dyulyyldthob8" path="res://style/hover.tres" id="5_rxhmk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cecy2"]
bg_color = Color(0, 0, 0, 0.545098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60sa1"]
bg_color = Color(0, 0, 0.219608, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 1, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3qic4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.032
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 19.736
offset_right = 128.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.899812, 0.900216)
texture = ExtResource("2_yp6uk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1253.0
offset_bottom = 644.0
scale = Vector2(0.920525, 1.00791)
theme_override_styles/panel = SubResource("StyleBoxFlat_cecy2")

[node name="BackButton" type="Button" parent="Panel"]
layout_direction = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -127.871
offset_top = -109.23
offset_right = 133.129
offset_bottom = -15.23
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_5g3sa")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed = ExtResource("4_ye6ia")
theme_override_styles/hover = ExtResource("5_rxhmk")
theme_override_styles/normal = SubResource("StyleBoxFlat_60sa1")
text = "BACK"

[node name="SETTING" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_5g3sa")
theme_override_font_sizes/font_size = 50
text = "SETTING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 155.0
offset_top = 80.0
offset_right = -126.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Master" type="Label" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "MASTER"

[node name="MasterSlider" type="HSlider" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="BGM" type="Label" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "BGM"

[node name="BGMSlider" type="HSlider" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = 3.0

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="Panel/VBoxContainer/GridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/GridContainer/BGMSlider" to="." method="_on_bgm_slider_value_changed"]
